common-api update: - added new api for admin-service - added new response codes admin-service update: - added api implementation

--- a/common-api/src/main/resources/response_codes_en.properties
+++ b/common-api/src/main/resources/response_codes_en.properties
@@ -1,1 +1,4 @@
 DIRECTORY_1=Directory by id hasn't been found.
+ADMIN_1=Cinema with current id hasn't been found
+ADMIN_2=Organization with current id hasn't been found.
+ADMIN_3=This organization already exist in system.
